tests/files/flow_controller_tests/should_run/036.cmdr
x = parseFloat(false);
print x;