tests/files/flow_controller_tests/should_fail/045.cmdr
x = false;
print cos(x);